[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
log = "0.4.17"
maelstrom-node = "0.1.6"
serde = {version = "1.0.160", features = ["derive"]}
serde_derive = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
tokio-context = "0.1.3"